--- a/style.css
+++ b/style.css
@@ -191,8 +191,9 @@
 .footer {
   background-color: rgb(50, 167, 145);
   color: white;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+  margin-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  padding-top: 1.5rem;
   text-align: center;
 }
 
